<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.SignInFragment">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_small"
        android:textColorHint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInText"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_small"
        android:textColorHint="@color/button"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignin"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:padding="@dimen/padding_medium"
        android:text="@string/sign_in"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/medium_radius"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignup"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_medium"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/medium_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignin"
        app:layout_constraintStart_toStartOf="@+id/buttonSignin"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignin"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>