<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/placeholder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/start"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/startButton"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toTopOf="@+id/scoreTableButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scoreTableButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/score_table"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/startButton"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toTopOf="@+id/exitButton"
        app:layout_constraintEnd_toEndOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/exit"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/startButton"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scoreTableButton"
        app:layout_constraintStart_toStartOf="@+id/scoreTableButton"
        app:layout_constraintTop_toBottomOf="@+id/scoreTableButton" />
</androidx.constraintlayout.widget.ConstraintLayout>