<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.QuizFragment">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePause" />

    <ImageView
        android:id="@+id/flagImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:src="@android:drawable/ic_menu_mapmode"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/questionText"
        app:layout_constraintStart_toStartOf="@+id/questionText"
        app:layout_constraintTop_toBottomOf="@+id/questionText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/countryName"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/button"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagImage"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/countryName"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/button"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/countryName"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/button"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:padding="@dimen/padding_small"
        android:text="@string/countryName"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/button"
        app:cornerRadius="@dimen/large_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/placeholder" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time : 60"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imagePause"
        app:layout_constraintEnd_toEndOf="@+id/questionText"
        app:layout_constraintTop_toTopOf="@+id/imagePause" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imagePause"
        app:layout_constraintStart_toStartOf="@+id/questionText"
        app:layout_constraintTop_toTopOf="@+id/imagePause" />

    <TextView
        android:id="@+id/scoreIntText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xsmall"
        android:text="20"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/scoreText"
        app:layout_constraintStart_toEndOf="@+id/scoreText"
        app:layout_constraintTop_toTopOf="@+id/scoreText" />

    <ImageView
        android:id="@+id/imagePause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:src="@drawable/pause_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>